--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,8 +22,7 @@
           </div>
         </div>
         <div class="form-group row justify-content-center">
-          <%= f.submit class: "btn btn-outline-light btn-lg" %>
-        </div>
+          <%= f.submit "Sign up", class: "btn btn-outline-light btn-lg" %>        </div>
       <% end %>
     </div>
     <div class="mb-3">
