code to the many to many association with some stylying like bootstrap

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -51,7 +51,8 @@
           </div>
         </li>
         <li class="nav-item">
-          <%= link_to 'Logout', logout_path, class: "nav-link", method: :delete %>
+        <%= link_to 'Logout', logout_path, method: :delete, class: "nav-link" %>
+
         </li>
       <% else %>
         <li class="nav-item">
