--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Alphablog</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>AlphaBlog</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-    <%= stylesheet_link_tag "https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css", integrity: "sha384-KyZXEAg3QhqLMpG8r+Knujsl5/4MR1dg4cbDxGI6zRlEjtDz2m3/1P1jwpBfZ8ES", crossorigin: "anonymous" %>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   </head>
 
-  <body>
-
- <% flash.each do |name, msg| %> 
-      <%= msg %> 
-    <% end %>
-
-
-    <%= yield %>
-
-
+  <body class="d-flex flex-column">
+    <%= render 'layouts/navigation' %>
+    <div id="page-content">
+      <%= render 'layouts/messages' %>
+      <%= yield %>
+    </div>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
